# ESII-project-backend

./: Dockerfile  alembic.ini  create_db.py  docker-compose.yml  pyproject.toml  start.sh
configs/: database.py
migrations/: env.py
migrations/versions/: 55ef2907b566_added_account_table.py
models/: db_model.py
src/: main.py
